# myos

./: .editorconfig  .gitignore  Makefile  README.md  buf.yaml  temp.md
.github/workflows/: ci.yml
ci/: archlinux-build.Containerfile  myos.vmx.in
daemon/: Cargo.toml
daemon/crates/myosd/: Cargo.toml  build.rs
daemon/crates/myosd/src/: loops.rs  main.rs  providers.rs  service.rs  state.rs
docs/: 00-ARCHITECTURE.md  01-BOOTLOADER.md  02-IO.md  03-OS-CREATION.md  04-ISO-BUILD-AND-SHIP.md  05-DEVELOPMENT.md  06-LOOPS.md  07-AGENT-KERNEL.md
os/archiso/: packages.extra.x86_64  profiledef.sh
os/archiso/airootfs/etc/: hostname  issue
os/archiso/airootfs/etc/greetd/: config.toml
os/archiso/airootfs/usr/lib/firefox/distribution/: policies.json
proto/: agent.proto
scripts/: build-iso.sh  build-packages.sh  doctor.sh  prepare-archiso-profile.sh  run-qemu.sh  run-vmware.sh  test-archiso-profile.sh  test.sh
shell/: README.md  pubspec.yaml
shell/lib/: main.dart
shell/lib/ipc/: agent_client.dart
shell/lib/ui/: history_page.dart  home_screen.dart  loops_sheet.dart  provider_sheet.dart  terminal_screen.dart
shell/linux/: CMakeLists.txt
shell/linux/runner/: my_application.cc
shell/test/: widget_test.dart
shell/tool/: gen_protos.sh
