[package]
name = "myosd"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
bytes = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
